# EEspice

./: .gitignore  A.mtx  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  config.md  eespice.sh  output.sh  readme.md  test.sh  test1.cpp  test_python_plot.sh
Benchmark/: resultplot.py  results_klu_kernel.csv  results_nicslu_kernel.csv  results_pardiso_kernel.csv
Benchmark/Results/: results_glu_kernel_2.csv  results_glu_kernel_4.csv  results_glu_kernel_8.csv  results_glu_kernel_a.csv  results_glu_kernel_d.csv  results_glu_kernel_d_double.csv  results_klu_kernel_2.csv  results_klu_kernel_4.csv  results_klu_kernel_8.csv  results_klu_kernel_a.csv  results_klu_kernel_d.csv  results_nicslu_kernel_2.csv  results_nicslu_kernel_4.csv  results_nicslu_kernel_8.csv  results_nicslu_kernel_a.csv  results_nicslu_kernel_d.csv  results_pardiso_kernel_2.csv  results_pardiso_kernel_4.csv  results_pardiso_kernel_8.csv  results_pardiso_kernel_a.csv  results_pardiso_kernel_d.csv
MatrixMul/: MatrixMul_SYCL.cpp  MatrixMul_oneMKL.cpp  backup.cpp
MatrixMul/onemkl/: CMakeLists.txt  matrix_mul_onemkl.cpp
MatrixMul/sycl/: CMakeLists.txt  matrix_mul_sycl.cpp
Modified Multi-solutions/: Gear_solver.h  IV_plotreader.py  LTE_Charge.hpp  Transient_code.cpp  Transient_code.h  Transient_plotreader.py  save.h  test1.cpp  test_bao.hpp  test_pulse_new.cpp
Netlist/: 128bit_dff_chain1.cir  128bit_dff_chain_res_1.cir  128bit_dff_chain_res_256.cir  128bit_dff_chain_res_512.cir  1bit_dff.cir  1bit_full_adder_28t.cir  64bit_full_adder_28t.cir  64bit_full_adder_28t_res.cir  64bit_full_adder_28t_res_full.cir  Dual_RC.cir  Inverter.cir  Ring.cir  ac.cir  ac_bsim.cir  batch.cir  bsim.cir  dc_sweep.cir  delay.cir  inv500.cir  inverter_chain_500_with_series_vdd_resistors.cir  ring2.cir  sin.cir  sin2.cir  single_RC.cir  test_inv.cir  test_mat.cir  test_nmos.cir  test_pmos.cir  tst.cir
Netlist/Chang/: 128bit_dff_chain_res_1.cir  128bit_dff_chain_res_512.cir  a4.cir  a4test.cir  example.cir  test.cir
Netlist/modelcards/: cmos90_model.hpp  modelcard.CMOS90  ptm90_model.hpp
Xuanhao_Bao/: .vscode json files.md  Dual_RC.cir  Global_variables.hpp  Inverter.cir  Makefile  MaxI.csv  Ploter_all_graphs.py  Test  Test.cpp  Threads time mid.csv  Threads time up.csv  Threads time.csv  Time_diff.csv  Time_step.py  Transient_code_parser  Transient_code_parser.cpp  Transient_code_parser.hpp  final.py  final_solution.csv  final_solution.py  old.hpp  simulation end time.csv  single_RC.cir  solution.csv  test_arma  test_arma.cpp  test_lte  test_lte.cpp  test_nmos.cir  threads_time(3threads).py  threads_time(ad).py  threads_time.py  time.csv  tst.cir  voltage2_current.csv
Xuanhao_Bao/Netlist/: Inverter.cir  Ring.cir  delay.cir  sin.cir  single_RC.cir  test_inv.cir  test_nmos.cir  test_pmos.cir  two_counter.cir  vccs.cir
circuit_test/C++/Circuit_test/: CMakeLists.txt  Diodo_IV.cpp  Diodo_circuit.cpp  IV_plotreader.py  MOSFET_IV.cpp  RC_test.cpp  Transient_code.cpp  Transient_code.h  Voltage_doubler.cpp
helper/: 5 threads.hpp  Test.cpp  XB_timer.hpp  arrayVSvec.cpp  copy.cpp  d8.cpp  decode_raw.py  mna_modify.cpp  multi.cpp  plot_raw.py  r_v_test.cpp  sp.hpp  stream_omp.cpp  test_arma.cpp  test_lte.cpp
helper/BSIMbenchmarkMP/: benchmark.cpp  loadomp.hpp
helper/BSIMbenchmarkOMP/: benchmark.cpp  calomp.hpp  color.cpp  color.hpp  color.py  color4.cpp  colorbenchmark.cpp  colorbenchmarkFixed.cpp  danial_cache.cpp  loadomp.cpp  loadomp.hpp  loadompbenchmark.cpp  plot_coloring_benchmark.py  single.hpp  time.hpp
helper/arrayCacheMiss/: cache_analysis.py  danial_cache.cpp
helper/solver/: convert_coords.py  klu_example.cpp  test_aocl.cpp  test_klu1.cpp  test_mkl.cpp
results/: Ploter_all_graphs.py  Threads time down.csv  Transient_plotreader.py  run.py  tgapN.py  threads_time(main_thread).py
src/: AC.hpp  AC_calcs.hpp  CKT.hpp  CKTmkVolt.hpp  CKTsetup.hpp  DC.hpp  DC_calcs.hpp  NIcomCof.hpp  Newton.hpp  NonLinearBatch.hpp  NonLinearMuti.hpp  OP.hpp  OP_calcs.hpp  SPICEcompatible.hpp  Transient.hpp  Transient_calcs.hpp  Transient_code_parser.cpp  Transient_code_parser.hpp  Transient_multi_solvers.hpp  Transient_single_solvers.hpp  VariantValue.hpp  XB_timer.hpp  batch.hpp  batch_calcs.hpp  circuit_parser.hpp  color.hpp  device.hpp  devsup.hpp  eemath.hpp  eespice.cpp  gal_variables.hpp  global.hpp  hybrid_matrix.hpp  integrate.hpp  klumatrix.hpp  klusolver.hpp  map.hpp  matrix.hpp  model_parser.hpp  model_setup.hpp  (+6 more)
src/bsim4v82/: LICENSE.txt  bsim4v82.hpp  bsim4v82NI.hpp  bsim4v82acstamp.hpp  bsim4v82ask.hpp  bsim4v82check.hpp  bsim4v82const.hpp  bsim4v82geo.hpp  bsim4v82map.hpp  bsim4v82paser.hpp  bsim4v82setup.hpp  bsim4v82soa.hpp  bsim4v82stamp.hpp  bsim4v82temp.hpp
src/bsim4v82/bsim4v82load/: bsim4v82applyStamps.hpp  bsim4v82calculateStamps.hpp  bsim4v82load.hpp  bsim4v82loadomp.hpp  bsim4v82polyDepletion.hpp
